Changes

from version 1.1.1 to 1.2.0

improvements:
- notes are now stored together with the sensor data and will be read in
  when loading or appending a data file
- a progress bar is shown when scanning for SIX and pump drivers is performed

  
from version 1.1.0 to 1.1.1

improvement:
- when changing chart axis range from 'automatic' propose sensible min/max values

bugfixes:
- fix several definition file handling issues
- fix bug that for existing data files the values were not properly recalculated
  when changing between raw and mmol/l values


from version 1.0.0 to 1.1.0

improvements:
- when a SIX measurement is running, the application icon changes to green
  to indicate this
- add always visible button to autoscale instead of the current chart's
  context menu entry to autoscale
- by Ctrl + Leftclick on a data point in the chart it is possible to add notes
- when appending sensor data check for the SIX number used the last time and
  warn if the current connected SIX is different
- percentage of maximal speed is displayed for every pump

bugfixes:
- for disabled pumps/valves don't show hint how to change pump/valve name
- autoscale scales now also the temperature axis
- issue proper error messages when reading or writing files that are currently
  in use by other programs
- don't make a time-costly port scan on disconnecting from SIX or pump driver
- when appending sensor data assure that its channel names are used
- stop running action when connection to pump driver is lost
- assure that definition file cannot be changed when action with calibration is
  running


from version 0.999.1 to 1.0.0

improvements:
- on connecting to a SIX ask for a sensor definition file if not is yet loaded
- add buttons to connect to a pump driver and SIX so that the corresponding
  menu entries are now optional methods to connect
- when appending to existing data files, it is checked if the currently loaded
  definition file is the same than used for the data file